--- a/demo/ft-document-panel-settings-editor.html
+++ b/demo/ft-document-panel-settings-editor.html
@@ -16,11 +16,12 @@ limitations under the License.
 
 
 <!-- Imports -->
-<link rel="import" href="../../ft-settings/ft-settings-publisher-behavior.html">
+<link rel="import" href="../../ft-global-variable/ft-global-variable.html">
 <link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../iron-input/iron-input.html">
 <link rel="import" href="../../paper-checkbox/paper-checkbox.html">
 <link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../ft-document-panel-settings-behavior.html">
 
 
 <!--
@@ -53,30 +54,28 @@ This element defines a source grid example that allows experimentation with conf
         </style>
 
         <!-- Settings -->
-        <paper-checkbox checked="{{showTitle}}">
-            Show Title
+        <ft-global-variable name="ft-document-panel-showHeading" value="{{showHeading}}"></ft-global-variable>
+        <ft-global-variable name="ft-document-panel-heading" value="{{heading}}"></ft-global-variable>
+        <ft-global-variable name="ft-document-panel-show-grid-button" value="{{showGridButton}}"></ft-global-variable>
+        <ft-global-variable name="ft-document-panel-show-list-button" value="{{showListButton}}"></ft-global-variable>
+        <ft-global-variable name="ft-document-panel-show-preview-button" value="{{showPreviewButton}}"></ft-global-variable>
+        <ft-global-variable name="ft-document-panel-show-upload-button" value="{{showUploadButton}}"></ft-global-variable>
+        <ft-global-variable name="ft-document-panel-show-download-button" value="{{showDownloadButton}}"></ft-global-variable>
+        <ft-global-variable name="ft-document-panel-show-delete-button" value="{{showDeleteButton}}"></ft-global-variable>
+        <ft-global-variable name="ft-document-panel-show-document-count" value="{{showDocumentCount}}"></ft-global-variable>
+
+        <!-- Settings -->
+        <paper-checkbox checked="{{showHeading}}">
+            Show Heading
         </paper-checkbox>
 
-        <div class="layout horizontal">
-
-            <!-- Label -->
-            <div>
-                Title:
-            </div>
-
-            <!-- Field -->
-            <iron-input
-                   id="titleField"
-                   bind-value="{{title}}"
-                   style="font-family:Arial;
-                            font-size:12px;
-                            width:100px; height:28px;
-                            padding-left:6px; padding-right:6px;
-                            color:#343434;">
-                <input value="{{value::input}}">
-            </iron-input>
-
-        </div>
+        <paper-input
+            id="headingField"
+            value="{{heading}}"
+            label="Heading:"
+            style="width:200px;"
+        >
+        </paper-input>
 
         <div style="height:20px"></div>
 
@@ -104,7 +103,7 @@ This element defines a source grid example that allows experimentation with conf
             Show Delete Button
         </paper-checkbox>
 
-        <paper-checkbox checked="{{showDocumentCountButton}}" style="width:190px; ">
+        <paper-checkbox checked="{{showDocumentCount}}" style="width:190px; ">
             Show Document Count
         </paper-checkbox>
 
@@ -116,92 +115,7 @@ This element defines a source grid example that allows experimentation with conf
         ({
             is: 'ft-document-panel-settings-editor',
 
-            behaviors: [
-                FileThis.SettingsPublisherBehavior
-            ],
-
-            observers:
-            [
-                "_onSettingsPropertyChanged(showTitle, title, showGridButton, showListButton, showPreviewButton, showUploadButton, showDownloadButton, showDeleteButton, showDocumentCount)"
-            ],
-
-            properties:
-            {
-                showTitle:
-                {
-                    type: Boolean,
-                    notify: true,
-                    value: true
-                },
-                title:
-                {
-                    type: String,
-                    notify: true,
-                    value: "Documents"
-                },
-                showGridButton:
-                {
-                    type: Boolean,
-                    notify: true,
-                    value: true
-                },
-
-                showListButton:
-                {
-                    type: Boolean,
-                    notify: true,
-                    value: true
-                },
-
-                showPreviewButton:
-                {
-                    type: Boolean,
-                    notify: true,
-                    value: true
-                },
-
-                showUploadButton:
-                {
-                    type: Boolean,
-                    notify: true,
-                    value: true
-                },
-
-                showDownloadButton:
-                {
-                    type: Boolean,
-                    notify: true,
-                    value: true
-                },
-
-                showDeleteButton:
-                {
-                    type: Boolean,
-                    notify: true,
-                    value: true
-                },
-
-                showDocumentCountButton:
-                {
-                    type: Boolean,
-                    notify: true,
-                    value: true
-                }
-            },
-
-            ready: function()
-            {
-                var propertyNames = [
-                    "showTitle", "title", "showGridButton", "showListButton", "showPreviewButton",
-                    "showUploadButton", "showDownloadButton", "showDeleteButton", "showDocumentCountButton"
-                ];
-                this.settingsPublish("ft-document-panel-settings-editor", propertyNames);
-            },
-
-            _onSettingsPropertyChanged: function()
-            {
-                this.updateSettings();
-            },
+            behaviors: [FileThis.DocumentPanelSettingsBehavior],
 
         });
 
