--- a/ft-document-panel-settings.html
+++ b/ft-document-panel-settings.html
@@ -37,6 +37,10 @@ Settings applied to the ft-document-panel.
 
             attached: function()
             {
+                // setTimeout(function()
+                // {
+                //     this._initializeSettings();
+                // }.bind(this), 1000);
                 this.async(this._initializeSettings);
             },
 
