--- a/ft-document-panel-settings-behavior.html
+++ b/ft-document-panel-settings-behavior.html
@@ -173,23 +173,23 @@ limitations under the License.
 
             var attributes = "";
             if (this.showHeading !== true)
-                attributes += "\n    show-heading=false";
+                attributes += '\n    show-heading="false"';
             if (this.heading !== "Documents")
-                attributes += "\n    heading='" + this.heading + "'";
+                attributes += '\n    heading="' + this.heading + '"';
             if (this.showGridButton !== true)
-                attributes += "\n    show-grid-button=false";
+                attributes += '\n    show-grid-button="false"';
             if (this.showListButton !== true)
-                attributes += "\n    show-list-button=false";
+                attributes += '\n    show-list-button="false"';
             if (this.showPreviewButton !== true)
-                attributes += "\n    show-preview-button=false";
+                attributes += '\n    show-preview-button="false"';
             if (this.showUploadButton !== true)
-                attributes += "\n    show-upload-button=false";
+                attributes += '\n    show-upload-button="false"';
             if (this.showDownloadButton !== true)
-                attributes += "\n    show-download-button=false";
+                attributes += '\n    show-download-button="false"';
             if (this.showDeleteButton !== true)
-                attributes += "\n    show-delete-button=false";
+                attributes += '\n    show-delete-button="false"';
             if (this.showDocumentCount !== true)
-                attributes += "\n    show-document-count=false";
+                attributes += '\n    show-document-count="false"';
 
             var settings = "";
 
