--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -68,8 +68,7 @@ A panel that displays a list of FileThis documents
         <ft-element-demo
                 name="ft-document-panel"
                 class="flex"
-                show-config="true"
-                code="[[code]]">
+                show-config="true">
 
             <!-- Settings -->
             <ft-document-panel-settings-editor
@@ -83,7 +82,6 @@ A panel that displays a list of FileThis documents
                 slot="instance"
                 id="panel"
                 style="width:100%; height:100%; "
-                code="{{code}}"
             >
             </ft-document-panel>
 
@@ -96,15 +94,6 @@ A panel that displays a list of FileThis documents
         Polymer
         ({
             is: 'demo-fixture',
-
-            properties:
-            {
-                code:
-                {
-                    type: String,
-                    value: ""
-                }
-            },
 
             ready: function()
             {
